<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Crush</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading Crush</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">Crush Logo</string>
    <string name="sign_up">Sign-up</string>

    <color name="crush_blue">#3EECD5</color>
    <color name="crush_grey">#E8E8E8</color>
    <color name="crush_white">#FFF</color>

    <string-array name="nav_array">
        <item>Home</item>
        <item>Add Crush</item>
        <item>Contact Crush</item>
        <item>Your Settings</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="message">message</string>
    <string name="profile">Profile</string>
    <string name="profile_name_hint">Name</string>
    <string name="profile_age_hint">Age</string>
    <string name="profile_hair_colour_hint">Hair Colour</string>
    <string name="profile_hair_length_hint">Hair Length</string>
    <string name="profile_eye_colour_hint">Eye Colour</string>
    <string name="profile_appearance">Appearance</string>
    <string name="profile_personality">Personality</string>
</resources>
